fixed snapshot overflow problem

--- a/css/gui.css
+++ b/css/gui.css
@@ -31,6 +31,9 @@ body
 
 .snapshot{
 	border: 1px solid black;
+	white-space: nowrap;
+	overflow-x: scroll;
+	overflow-y: hidden;
 }
 
 #canvas{
